gcc/testsuite/gdc.test/compilable/futurexf.d
/* PERMUTE_ARGS:
   REQUIRED_ARGS: -Xffuture.json
 */

class A
{
    @__future char msg();
}

void main()
{
}
